--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,3 @@
-# .github/workflows/pages.yml
 name: Deploy GitHub Pages (docs)
 
 on:
@@ -30,16 +29,17 @@ jobs:
           set -euo pipefail
           mkdir -p docs
           touch docs/.nojekyll
-          # keep your existing index if present
+          # keep your existing index if present; otherwise write a stub
           if [ ! -f docs/index.html ]; then
             cat > docs/index.html <<'HTML'
-<!doctype html><meta charset="utf-8">
-<title>Open Receipts</title>
-<style>body{font-family:system-ui,-apple-system,Segoe UI,Inter,Roboto,Arial;margin:40px;max-width:760px}code{background:#0b1020;color:#dbeafe;padding:.2rem .35rem;border-radius:.35rem}</style>
-<h1>Open Receipts</h1>
-<p>Static site is live. Replace this file at <code>docs/index.html</code>.</p>
-HTML
+            <!doctype html><meta charset="utf-8">
+            <title>Open Receipts</title>
+            <style>body{font-family:system-ui,-apple-system,Segoe UI,Inter,Roboto,Arial;margin:40px;max-width:760px}code{background:#0b1020;color:#dbeafe;padding:.2rem .35rem;border-radius:.35rem}</style>
+            <h1>Open Receipts</h1>
+            <p>Static site is live. Replace this file at <code>docs/index.html</code>.</p>
+            HTML
           fi
+          ls -la docs
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
